# open-cbgm-standalone

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: package.yml
lib/sqlite3/: CMakeLists.txt
scripts/: CMakeLists.txt  compare_witnesses.cpp  enumerate_relationships.cpp  find_relatives.cpp  optimize_substemmata.cpp  populate_db.cpp  print_global_stemma.cpp  print_local_stemma.cpp  print_textual_flow.cpp
